Alternatives Stylesheet hinzugefügt
Alternatives Stylesheet zur Simplen Struktur-Ansicht hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <meta name="description" content="Real HTML5 Template, Template-Vorlage für SELFHTML">
 <link rel="canonical" href="http://demo.team-idilico.net/rhtml5finaletemplate/">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-<link href="css/main-style.css" rel="stylesheet">
+<link href="css/main-style.css" rel="stylesheet" title="Default Stylesheet">
+<link href="css/structure.css" rel="alternate stylesheet" title="Structure Stylesheet" />
 </head><!-- head ends -->
 <body itemscope itemtype="http://schema.org/WebPage">
 
@@ -57,7 +58,7 @@
     <!-- 
         aside (1. Sidebar)
     -->
-    <aside> <!-- Sidebar -->
+    <aside>
       <h2>Hauptmenu</h2>
       <nav>
         <ul id="navigation">
@@ -144,7 +145,7 @@
 
 
     <!-- 
-        aside (2. Sidebar mit Sub-Menu und Social Network Buttons)
+        aside (2. Sidebar mit Submenu und Social Network Buttons)
     -->
     <aside>
       <h2>Submenu</h2>
