Anpassungen in der Alternativen structure.css
Noch einige korrekturen an der Alternativen structure.css vorgenommen.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link rel="canonical" href="http://demo.team-idilico.net/rhtml5finaletemplate/">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 <link href="css/main-style.css" rel="stylesheet" title="Default Stylesheet">
-<link href="css/structure.css" rel="alternate stylesheet" title="Structure Stylesheet" />
+<link href="css/structure.css" rel="alternate stylesheet" title="Structure Stylesheet">
 </head><!-- head ends -->
 <body itemscope itemtype="http://schema.org/WebPage">
 
